--- a/src/app/homepage/EasiestWay.css
+++ b/src/app/homepage/EasiestWay.css
@@ -3,9 +3,13 @@
     --secondary-color: #e9f3fc;
    --third-color: #2364aa; */
 
-   --primary-color: #cd4308 ;
+   /* --primary-color: #cd4308 ;
    --secondary-color: #fefdf8;
-  --third-color: #f06c00;
+  --third-color: #f06c00; */
+
+  --primary-color: rgb(20, 64, 71) ;
+  --secondary-color: rgb(238, 247, 249);
+ --third-color: rgb(36, 101, 111);
   }
 
 .section-1{
@@ -30,11 +34,12 @@
 .box1{
     /* background: url("https://tax2win.in/assets-new/img/new-theme/service-element1-copy.svg") left bottom no-repeat #5585b6; */
     /* background-color: #5585b6; */
-    background-color: #f06c00;
+    background-color: var(--primary-color);
 }
 .box-2{
     /* background: url("https://tax2win.in/assets-new/img/new-theme/service-element2-copy.svg") right bottom no-repeat #197E37; */
-     background-color: var(--primary-color);
+   
+     background-color: #0d2a2e;
 }
 .eCA{
      font-weight: 500;
