--- a/src/app/service-page/service.css
+++ b/src/app/service-page/service.css
@@ -30,7 +30,7 @@
     }
 }
 .outer-div{
-    background: linear-gradient(90deg, #192833 0%, #163a58 100%);
+    background: linear-gradient(90deg, #1b1e1f 0%, #144148 100%);
 }
 
 /* three way section css */
@@ -88,7 +88,7 @@
 /* Discover Why Early E-Filing ITR Filing is a Smart Move! */
 
 .smart-move-section{
-    background-color: #122a3a;
+    background-color: #19191a;
 }
 
 .smart-move-reason{
