--- a/src/app/financial-details/financial.css
+++ b/src/app/financial-details/financial.css
@@ -26,7 +26,7 @@
 }
 
 .get-button{
-    background-color: #09345a;
+    background-color: var(--third-color);
 }
 .continue-btn{
     background-color: var(--primary-color);
