--- a/src/app/homepage/steps.css
+++ b/src/app/homepage/steps.css
@@ -17,6 +17,11 @@ font-size: 40px;
 }
 
 
+.ITR-btn2{
+   background-color: var(--secondary-color);
+   color: var(--primary-color);
+   width: 150px;
+}
 
 
 @media only screen and (max-width: 800px) {
