--- a/src/app/pricing/pricing.css
+++ b/src/app/pricing/pricing.css
@@ -72,7 +72,7 @@ html , body{
 
 
 .pricing{
-    width: 230px;
+    width: 300px;
     box-shadow: var(--shd,0 5px 19px rgba(120, 120, 120, 0.6));
 }
 .pricing-2{
@@ -85,18 +85,21 @@ html , body{
 .suited{
     color: rgb(56, 125, 228);
 }
+.price-top-img{
+    height: 80px;
+}
 
 .get-btn{
     border: 1px solid var(--third-color);
-
+    margin-top: 30px;
 }
 .btn-p{
     color: var(--third-color);
 }
 
 .image{
-    width: 20px !important;
-    height: 20px !important;
+    width: 18px !important;
+    height: 18px !important;
 }
 
 .pricing-heading{
