--- a/src/app/tax-return/Efilling.css
+++ b/src/app/tax-return/Efilling.css
@@ -183,3 +183,11 @@ color: #253243;
 .loading-indicator {
      height: 100vh;
 }
+
+.efilling-rate{
+    width: 18%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
