--- a/src/app/nri/nri.css
+++ b/src/app/nri/nri.css
@@ -17,8 +17,7 @@ li img {
     background-color: #fafbfd;;
 }
 .ca-text h1{
-    color: var(--primary-color);
-   
+    color: var(--primary-color);  
 }
 .ca-form{
     width: 436px;
@@ -27,7 +26,6 @@ li img {
 
 .book-btn{
     background-color: var(--primary-color);
-
 }
 input , textarea{
     width: 100%;
@@ -158,7 +156,7 @@ padding: 15px;
   margin: 7px 0px;
 }
 
-.Faq{
+.faqOuter{
     border-bottom: 1px solid rgb(227, 227, 227);
     /* transition: opacity 2s ease, max-height 2s ease; */
 }
@@ -185,7 +183,6 @@ padding: 15px;
 @media (max-width: 800px) {
 
     .review{
- 
   height: 300px;
   width:  100% !important;
 }
@@ -224,4 +221,13 @@ ol.custom-circle li::before {
     .whoNeed h1 , .ca-text h1 , .hearClients h1 , .nriInclude h1 , .why-choose h1{
    font-size: 25px !important;
 }
+}
+
+.end-price{
+  background-color: rgb(244, 244, 244);
+  padding: 2% 7%;
+}
+.end-price button{
+   padding: 6px 15px;
+   background-color: var(--primary-color);
 }
