--- a/src/app/refund-status/refund.css
+++ b/src/app/refund-status/refund.css
@@ -10,6 +10,12 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
+@media (max-width:600px) {
+  .refund-page{
+    padding: 5% 2%;
+  }
+}
+
 /* .header {
   text-align: center;
   margin-bottom: 3rem;
